Static site (2019-01-02 shi)
==============================
Update attribution for csv
Update all translations


Static site (2018-12-17 shi)
==============================
Added FAQ technical question 16 from Github issue #441
Updated new question for translations
Updated css for span.list in FAQ


Static site (2018-04-26 shi)
==============================
Update footer text about IATI


Static site (2018-04-13 shi)
==============================
Update attribution for translation
Update FAQ section for About page
Update footer for static site
Update all translations
Add subject to all email links sitewide


Static site (2018-04-12 shi)
==============================
Add translation system for FAQ
Add french translation for FAQ
Update all other translations
Add french translation attribution in About page
Update FAQ numbering style
Update css for FAQ page


Static site (2018-04-06 shi)
==============================
Clean up faq, about, news chunks
New redesign for blog list
Update blog links
Added summary to blog posts


Static site (2018-04-03 shi)
==============================
Tweaked blog post with more descriptions and screenshots


Static site (2018-03-21 shi)
==============================
Edit and split blog post into two seperate posts


Static site (2018-03-16 shi)
==============================
Updated Dash section in About page
Updated About page styles


Static site (2017-09-06 shi)
==============================
Added new blog post


Static site (2017-09-02 shi)
==============================
Updated Explore information in About page
Updated images in About page
Added Database Logs section to About page
Updated translations
Updated footer links
Updated Install section in About page
Fixed scrollTop link


Static site (2017-09-01 shi)
==============================
Updated FAQ with Explorer section
Updated FAQ styles
Updated FAQ Generator section with https info


Static site (2017-06-22 shi)
==============================
Updated FAQ with gen13

