@@ -241,6 +241,9 @@
 			<li><a href="#tech14">{faq_technical_q14_text}</a></li>
 			<li><a href="#tech15">{faq_technical_q15_text}</a></li>
 			<li><a href="#tech16">{faq_technical_q16_text}</a></li>
+			<li><a href="#tech17">{faq_technical_q17_text}</a></li>
+			<li><a href="#tech18">{faq_technical_q18_text}</a></li>
+			<li><a href="#tech19">{faq_technical_q19_text}</a></li>
 		</ul>
 	</div>
 	
@@ -355,6 +358,27 @@
 			<span class="list">{faq_technical_q16_text}</span>
 			<span class="info">
 				{faq_technical_a16_text}
+			</span>
+		</li>
+		<li>
+			<span id="tech17"></span>
+			<span class="list">{faq_technical_q17_text}</span>
+			<span class="info">
+				{faq_technical_a17_text}
+			</span>
+		</li>
+		<li>
+			<span id="tech18"></span>
+			<span class="list">{faq_technical_q18_text}</span>
+			<span class="info">
+				{faq_technical_a18_text}
+			</span>
+		</li>
+		<li>
+			<span id="tech19"></span>
+			<span class="list">{faq_technical_q19_text}</span>
+			<span class="info">
+				{faq_technical_a19_text}
 			</span>
 		</li>
 	</ul>
