@@ -1,3 +1,9 @@
+Static site (2019-01-11 shi)
+==============================
+Add FAQ for new transaction graphs in SAVi
+Update all translations
+
+
 Static site (2019-01-02 shi)
 ==============================
 Update attribution for csv
